src/objects/CourtRepAssm__c.object
<CustomObject>
    <fields>
        <fullName>AssessmentContainerId__c</fullName>
        <label>AssessmentContainerId</label>
        <referenceTo>AssessmentContainer__c</referenceTo>
        <relationshipLabel>aCourtRepsAssm</relationshipLabel>
        <relationshipName>aCourtRepsAssm</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Court_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Court Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CourtRepassm</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Substance_Abuse_Problems__c</fullName>
        <description>Copied to Contact when assessment complete</description>
        <label>Current Substance Abuse Problems</label>
        <picklist>
            <picklistValues>
                <fullName>Current SA Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA Use History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No SA Use</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Education_Section_1__c</fullName>
        <label>Education Section 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employment_Section_1__c</fullName>
        <label>Employment Section 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Family_Peers_Section_1__c</fullName>
        <label>Family &amp; Peers Section 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Health__c</fullName>
        <label>Health</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legal__c</fullName>
        <label>Legal</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Miscellaneous1__c</fullName>
        <label>Miscellaneous</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Residence__c</fullName>
        <label>Residence</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social__c</fullName>
        <label>Social</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Substance_Abuse_Section_1__c</fullName>
        <label>Substance Abuse Section 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Update_Diploma_Status_at_Intake__c</fullName>
        <description>Copied to Contact when assessment complete</description>
        <label>Update Diploma Status at Intake</label>
        <picklist>
            <picklistValues>
                <fullName>High School Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IEP Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate&apos;s Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No High School/HSE Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSE Diploma</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Update_Employed_at_Intake__c</fullName>
        <description>Copied to Contact when assessment complete</description>
        <label>Update Employed  at Intake</label>
        <picklist>
            <picklistValues>
                <fullName>not entered</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Employed P/T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employed F/T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Update_Mental_Health_Issues_at_Interview__c</fullName>
        <label>Mental Health Issues at Interview</label>
        <picklist>
            <picklistValues>
                <fullName>Current MH Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No MH Issues</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Update_School_GED_Enrollment_at_Intake__c</fullName>
        <description>Copied to Contact when assessment complete</description>
        <label>Update School/HSE Enrollment at Intake</label>
        <picklist>
            <picklistValues>
                <fullName>Attended in past two months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolled but not attending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Enrolled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>aCourtRepAssm</label>
    <nameField>
        <label>aCourtRep Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>aCourtRepsAssm</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>